# C

./: CMakeLists.txt
Att1/: att1.c  teste.c  teste02.c
Att2/: for.c  if-else.c  switch-case.c  while.c
AttSala/: attsala.c
Attavaliativa/: att01.c  att02.c  att10.c  att3.c  att4.c  att5.c  att7.c  att8.c  att9.c
Torneio/: att1.c
aula/: aula02.c  aula03.c  aula04.c  aula05.c  aula06.c  forca.c  lista.c  lista_r.c  teste.c
