cmake_minimum_required(VERSION 3.28)
project(C C)

set(CMAKE_C_STANDARD 11)
add_executable(C Att2/while.c)
add_executable(A aula/aula06.c)
add_executable(F aula/forca.c)
add_executable(D AttSala/attsala.c)
add_executable(E Torneio/att1.c)
add_executable(G aula/lista.c)
add_executable(I aula/lista_r.c)
add_executable(T Attavaliativa2/at2.c)


